update 简化 stream 代码写法 (java 16) xx.collect(Collectors.toList()) => xx.toList() ; update 简化 instanceof 代码写法 (java 12) 直接在后面定义变量 ; update 简化 switch 代码写法 (java 12) ;